@@ -144,7 +144,17 @@ USE_L10N = True
 
 USE_TZ = True
 
-LOGIN_URL='/accounts/login'
+LOGIN_URL='/login/'
+LOGIN_REDIRECT_URL = '/'
+
+AUTH_PASSWORD_VALIDATORS = [
+    {
+        'NAME': 'django.contrib.auth.password_validation.MinimumLengthValidator',
+        'OPTIONS': {
+            'min_length': 8,
+        }
+    },
+]
 #
 EMAIL_BACKEND = 'django.core.mail.backends.smtp.EmailBackend'
 EMAIL_HOST = get_secret('CART_ULSTER_EMAIL_HOST')
