@@ -228,3 +228,44 @@ a.pkt-link, .breadcrumb a {
 #url-text {
 	color:#00f;
 }
+
+ul.errorlist {
+    list-style-type: none;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+table.registration-form {
+	padding:10px;
+	margin-top:10px;
+    margin-left:auto;
+    margin-right:auto;
+    background: #FFF;
+    border: 2px solid #888;
+    border-radius:5px;
+}
+
+input[type="submit"] {
+    text-decoration: none;
+    color:#000;
+    background: #EEE;
+    -moz-appearance: button;
+    -moz-padding-end: 6px;
+    -moz-padding-start: 6px;
+    border: 2px outset #F9F9F8;
+    border-radius:5px;
+    cursor:pointer;
+}
+
+.help ul {
+	list-style-type:none;
+	font-size:0.8em;
+	margin-top:0px;
+	margin-bottom:0px;
+}
+
+.errorlist li {
+    list-style-type:none;
+    font-size:0.8em;
+    color:#F00;
+}
