@@ -1,0 +1,5 @@
+{% extends "base/base.html" %}
+{% load staticfiles %}
+{% block content %}
+    <p>Your password was changed.</p>
+{% endblock content%}
